fixed refresh logo being covered when screen size was too small

--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -50,7 +50,7 @@
   border-radius: 10px;
   width: 20px;
   height: 20px;
-  top: 40px;
+  top: 50vh;
   right: 10px;
   display: flex;
   justify-content: center;
